--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -58,19 +58,19 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>E:\Program Files %28x86%29\IntelSWTools\VTune Amplifier 2019\include;$(ProjectDir)zydis\src;$(ProjectDir)zydis\include;$(ProjectDir)jemalloc\include\msvc_compat;$(ProjectDir)jemalloc\include;$(IncludePath)</IncludePath>
-    <LibraryPath>E:\Program Files %28x86%29\IntelSWTools\VTune Amplifier 2019\lib64;$(LibraryPath)</LibraryPath>
+    <IncludePath>E:\Projects\Skyrim\SkyrimSETest\Dependencies\zydis\msvc\zydis;E:\Projects\Skyrim\SkyrimSETest\Dependencies\tbb\include;E:\Projects\Skyrim\SkyrimSETest\Dependencies\zydis\include;E:\Projects\Skyrim\SkyrimSETest\Dependencies;E:\Program Files %28x86%29\IntelSWTools\VTune Amplifier 2019\include;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\Projects\Skyrim\SkyrimSETest\x64\Release;E:\Program Files %28x86%29\IntelSWTools\VTune Amplifier 2019\lib64;$(LibraryPath)</LibraryPath>
     <TargetName>d3dx9_42</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>E:\Program Files %28x86%29\IntelSWTools\VTune Amplifier 2019\include;$(ProjectDir)zydis\src;$(ProjectDir)zydis\include;$(ProjectDir)jemalloc\include\msvc_compat;$(ProjectDir)jemalloc\include;$(IncludePath)</IncludePath>
-    <LibraryPath>E:\Program Files %28x86%29\IntelSWTools\VTune Amplifier 2019\lib64;$(LibraryPath)</LibraryPath>
+    <IncludePath>E:\Projects\Skyrim\SkyrimSETest\Dependencies\zydis\msvc\zydis;E:\Projects\Skyrim\SkyrimSETest\Dependencies\tbb\include;E:\Projects\Skyrim\SkyrimSETest\Dependencies\zydis\include;E:\Projects\Skyrim\SkyrimSETest\Dependencies;E:\Program Files %28x86%29\IntelSWTools\VTune Amplifier 2019\include;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\Projects\Skyrim\SkyrimSETest\x64\Release;E:\Program Files %28x86%29\IntelSWTools\VTune Amplifier 2019\lib64;$(LibraryPath)</LibraryPath>
     <TargetName>d3dx9_42</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='EditAndContinue|x64'">
-    <IncludePath>E:\Program Files %28x86%29\IntelSWTools\VTune Amplifier 2019\include;$(ProjectDir)zydis\src;$(ProjectDir)zydis\include;$(ProjectDir)jemalloc\include\msvc_compat;$(ProjectDir)jemalloc\include;$(IncludePath)</IncludePath>
-    <LibraryPath>E:\Program Files %28x86%29\IntelSWTools\VTune Amplifier 2019\lib64;$(LibraryPath)</LibraryPath>
+    <IncludePath>E:\Projects\Skyrim\SkyrimSETest\Dependencies\zydis\msvc\zydis;E:\Projects\Skyrim\SkyrimSETest\Dependencies\tbb\include;E:\Projects\Skyrim\SkyrimSETest\Dependencies\zydis\include;E:\Projects\Skyrim\SkyrimSETest\Dependencies;E:\Program Files %28x86%29\IntelSWTools\VTune Amplifier 2019\include;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\Projects\Skyrim\SkyrimSETest\x64\Release;E:\Program Files %28x86%29\IntelSWTools\VTune Amplifier 2019\lib64;$(LibraryPath)</LibraryPath>
     <TargetName>d3dx9_42</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -80,6 +80,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>NOMINMAX;_REENTRANT;JEMALLOC_EXPORT=;_DEBUG;_WINDOWS;_USRDLL;SKYRIM64_TEST_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <LanguageStandard>stdcpplatest</LanguageStandard>
+      <AdditionalOptions>/D "NOMINMAX" /D "ZYDIS_STATIC_DEFINE"  /D "TRACY_ON_DEMAND" /D "xxxTRACY_ENABLE" %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -92,7 +93,7 @@
       <PrecompiledHeader>
       </PrecompiledHeader>
       <Optimization>MaxSpeed</Optimization>
-      <PreprocessorDefinitions>NOMINMAX;_REENTRANT;JEMALLOC_EXPORT=;NDEBUG;_WINDOWS;_USRDLL;SKYRIM64_TEST_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NOMINMAX;NDEBUG;_WINDOWS;_USRDLL;SKYRIM64_TEST_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <UseMSVC>false</UseMSVC>
@@ -101,6 +102,7 @@
       <Mtune>Broadwell</Mtune>
       <CCppSupport>Cpp17Support</CCppSupport>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <AdditionalOptions>/D "NOMINMAX" /D "ZYDIS_STATIC_DEFINE"  /D "TRACY_ON_DEMAND" /D "xxxTRACY_ENABLE" %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -123,6 +125,7 @@
       <Mtune>Broadwell</Mtune>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
+      <AdditionalOptions>/D "NOMINMAX" /D "ZYDIS_STATIC_DEFINE"  /D "TRACY_ON_DEMAND" /D "xxxTRACY_ENABLE" %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -130,9 +133,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="MaskedOcclusionCulling\CullingThreadpool.h" />
-    <ClInclude Include="MaskedOcclusionCulling\MaskedOcclusionCulling.h" />
-    <ClInclude Include="meshoptimizer\src\meshoptimizer.h" />
     <ClInclude Include="src\config.h" />
     <ClInclude Include="src\patches\rendering\d3d11_proxy.h" />
     <ClInclude Include="src\patches\rendering\GpuCircularBuffer.h" />
@@ -211,12 +211,6 @@
     <ClInclude Include="src\dump.h" />
     <ClInclude Include="src\profiler.h" />
     <ClInclude Include="src\typeinfo\hk_rtti.h" />
-    <ClInclude Include="imgui\imconfig.h" />
-    <ClInclude Include="imgui\imgui.h" />
-    <ClInclude Include="imgui\imgui_internal.h" />
-    <ClInclude Include="imgui\stb_rect_pack.h" />
-    <ClInclude Include="imgui\stb_textedit.h" />
-    <ClInclude Include="imgui\stb_truetype.h" />
     <ClInclude Include="src\typeinfo\ms_rtti.h" />
     <ClInclude Include="src\ui\imgui_ext.h" />
     <ClInclude Include="src\ui\imgui_impl_dx11.h" />
@@ -232,59 +226,9 @@
     <ClInclude Include="src\vfs\vfs_hook.h" />
     <ClInclude Include="src\vfs\vfs_util.h" />
     <ClInclude Include="src\xutil.h" />
-    <ClInclude Include="xbyak\xbyak.h" />
-    <ClInclude Include="xbyak\xbyak_bin2hex.h" />
-    <ClInclude Include="xbyak\xbyak_mnemonic.h" />
-    <ClInclude Include="xbyak\xbyak_util.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="jemalloc\arena.c" />
-    <ClCompile Include="jemalloc\background_thread.c" />
-    <ClCompile Include="jemalloc\base.c" />
-    <ClCompile Include="jemalloc\bin.c" />
-    <ClCompile Include="jemalloc\bitmap.c" />
-    <ClCompile Include="jemalloc\ckh.c" />
-    <ClCompile Include="jemalloc\ctl.c" />
-    <ClCompile Include="jemalloc\div.c" />
-    <ClCompile Include="jemalloc\extent.c" />
-    <ClCompile Include="jemalloc\extent_dss.c" />
-    <ClCompile Include="jemalloc\extent_mmap.c" />
-    <ClCompile Include="jemalloc\hash.c" />
-    <ClCompile Include="jemalloc\hooks.c" />
-    <ClCompile Include="jemalloc\jemalloc.c" />
-    <ClCompile Include="jemalloc\large.c" />
-    <ClCompile Include="jemalloc\log.c" />
-    <ClCompile Include="jemalloc\malloc_io.c" />
-    <ClCompile Include="jemalloc\mutex.c" />
-    <ClCompile Include="jemalloc\mutex_pool.c" />
-    <ClCompile Include="jemalloc\nstime.c" />
-    <ClCompile Include="jemalloc\pages.c" />
-    <ClCompile Include="jemalloc\prng.c" />
-    <ClCompile Include="jemalloc\prof.c" />
-    <ClCompile Include="jemalloc\rtree.c" />
-    <ClCompile Include="jemalloc\stats.c" />
-    <ClCompile Include="jemalloc\sz.c" />
-    <ClCompile Include="jemalloc\tcache.c" />
-    <ClCompile Include="jemalloc\ticker.c" />
-    <ClCompile Include="jemalloc\tsd.c" />
-    <ClCompile Include="jemalloc\witness.c" />
-    <ClCompile Include="MaskedOcclusionCulling\CullingThreadpool.cpp" />
-    <ClCompile Include="MaskedOcclusionCulling\MaskedOcclusionCulling.cpp" />
-    <ClCompile Include="MaskedOcclusionCulling\MaskedOcclusionCullingAVX2.cpp">
-      <EnableEnhancedInstructionSet Condition="'$(Configuration)|$(Platform)'=='Release|x64'">AdvancedVectorExtensions2</EnableEnhancedInstructionSet>
-    </ClCompile>
-    <ClCompile Include="MaskedOcclusionCulling\MaskedOcclusionCullingAVX512.cpp" />
-    <ClCompile Include="meshoptimizer\src\indexcodec.cpp" />
-    <ClCompile Include="meshoptimizer\src\indexgenerator.cpp" />
-    <ClCompile Include="meshoptimizer\src\overdrawanalyzer.cpp" />
-    <ClCompile Include="meshoptimizer\src\overdrawoptimizer.cpp" />
-    <ClCompile Include="meshoptimizer\src\simplifier.cpp" />
-    <ClCompile Include="meshoptimizer\src\stripifier.cpp" />
-    <ClCompile Include="meshoptimizer\src\vcacheanalyzer.cpp" />
-    <ClCompile Include="meshoptimizer\src\vcacheoptimizer.cpp" />
-    <ClCompile Include="meshoptimizer\src\vertexcodec.cpp" />
-    <ClCompile Include="meshoptimizer\src\vfetchanalyzer.cpp" />
-    <ClCompile Include="meshoptimizer\src\vfetchoptimizer.cpp" />
+    <ClCompile Include="src\common.cpp" />
     <ClCompile Include="src\d3d9.cpp" />
     <ClCompile Include="src\patches\achievements.cpp" />
     <ClCompile Include="src\patches\fileio.cpp" />
@@ -334,9 +278,6 @@
     <ClCompile Include="src\patches\TES\Console.cpp" />
     <ClCompile Include="src\profiler.cpp" />
     <ClCompile Include="src\typeinfo\hk_rtti.cpp" />
-    <ClCompile Include="imgui\imgui.cpp" />
-    <ClCompile Include="imgui\imgui_demo.cpp" />
-    <ClCompile Include="imgui\imgui_draw.cpp" />
     <ClCompile Include="src\typeinfo\ni_rtti.cpp" />
     <ClCompile Include="src\ui\imgui_ext.cpp" />
     <ClCompile Include="src\ui\imgui_impl_dx11.cpp" />
@@ -355,21 +296,8 @@
     <ClCompile Include="src\xutil.cpp" />
     <ClCompile Include="src\typeinfo\ms_rtti.cpp" />
     <ClCompile Include="src\patches\window.cpp" />
-    <ClCompile Include="zydis\src\Decoder.c" />
-    <ClCompile Include="zydis\src\DecoderData.c" />
-    <ClCompile Include="zydis\src\FormatHelper.c" />
-    <ClCompile Include="zydis\src\Formatter.c" />
-    <ClCompile Include="zydis\src\MetaInfo.c" />
-    <ClCompile Include="zydis\src\Mnemonic.c" />
-    <ClCompile Include="zydis\src\Register.c" />
-    <ClCompile Include="zydis\src\SharedData.c" />
-    <ClCompile Include="zydis\src\Utils.c" />
-    <ClCompile Include="zydis\src\Zydis.c" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="MaskedOcclusionCulling\CompilerSpecific.inl" />
-    <None Include="MaskedOcclusionCulling\MaskedOcclusionCullingCommon.inl" />
-    <None Include="My Amplifier Results - skyrim64_test\My Amplifier Results - skyrim64_test.amplxeproj" />
     <None Include="src\patches\rendering\d3d11_codegen_tables.inl" />
     <None Include="src\patches\rendering\d3d11_tls_patchlist.inl" />
     <None Include="src\patches\rendering\d3d11_tls_xreflist.inl" />
