--- a/Dependencies/libjemalloc.vcxproj
+++ b/Dependencies/libjemalloc.vcxproj
@@ -106,19 +106,19 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>E:\Projects\Skyrim\SkyrimSETest\Dependencies\jemalloc\include\msvc_compat;E:\Projects\Skyrim\SkyrimSETest\Dependencies\jemalloc\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)Dependencies\jemalloc\include\msvc_compat;$(SolutionDir)Dependencies\jemalloc\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>E:\Projects\Skyrim\SkyrimSETest\Dependencies\jemalloc\include\msvc_compat;E:\Projects\Skyrim\SkyrimSETest\Dependencies\jemalloc\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)Dependencies\jemalloc\include\msvc_compat;$(SolutionDir)Dependencies\jemalloc\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>E:\Projects\Skyrim\SkyrimSETest\Dependencies\jemalloc\include\msvc_compat;E:\Projects\Skyrim\SkyrimSETest\Dependencies\jemalloc\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)Dependencies\jemalloc\include\msvc_compat;$(SolutionDir)Dependencies\jemalloc\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>E:\Projects\Skyrim\SkyrimSETest\Dependencies\jemalloc\include\msvc_compat;E:\Projects\Skyrim\SkyrimSETest\Dependencies\jemalloc\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)Dependencies\jemalloc\include\msvc_compat;$(SolutionDir)Dependencies\jemalloc\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
