Implement BSGraphicsState and NiPointer (partial)

--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="src\patches\rendering\GpuCircularBuffer.h" />
     <ClInclude Include="src\patches\rendering\GpuTimer.h" />
     <ClInclude Include="src\patches\TES\BGSDistantTreeBlock.h" />
+    <ClInclude Include="src\patches\TES\BSGraphicsState.h" />
     <ClInclude Include="src\patches\TES\BSGraphicsTypes.h" />
     <ClInclude Include="src\patches\TES\BSJobs.h" />
     <ClInclude Include="src\patches\TES\BSRenderPass.h" />
@@ -197,6 +198,7 @@
     <ClInclude Include="src\patches\TES\NiMain\NiObject.h" />
     <ClInclude Include="src\patches\TES\NiMain\NiObjectNET.h" />
     <ClInclude Include="src\patches\TES\NiMain\NiPoint.h" />
+    <ClInclude Include="src\patches\TES\NiMain\NiPointer.h" />
     <ClInclude Include="src\patches\TES\NiMain\NiRefObject.h" />
     <ClInclude Include="src\patches\TES\NiMain\NiRTTI.h" />
     <ClInclude Include="src\patches\TES\NiMain\NiSkinInstance.h" />
@@ -251,6 +253,7 @@
     <ClCompile Include="src\patches\TES\BGSDistantTreeBlock.cpp" />
     <ClCompile Include="src\patches\TES\BSBatchRenderer.cpp" />
     <ClCompile Include="src\patches\TES\BSGraphicsRenderer.cpp" />
+    <ClCompile Include="src\patches\TES\BSGraphicsState.cpp" />
     <ClCompile Include="src\patches\TES\BSJobs.cpp" />
     <ClCompile Include="src\patches\TES\BSShader\BSShaderProperty.cpp" />
     <ClCompile Include="src\patches\TES\BSShader\BSShaderUtil.cpp" />
