--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -12,10 +12,11 @@ WindowPatch=true                    ; Fix for running out of handles and dialogs
 SteamPatch=true                     ; Prevent Steam from saying you're ingame while the CK is open
 MemoryPatch=true                    ; Replace Bethesda's memory allocator with TBBMalloc
 NavMeshPseudoDelete=false           ; Remove a triangle from a navmesh without deleting it
-AllowSaveESM=true                   ; Allow saving master files directly
+AllowSaveESM=false                  ; Allow saving master files directly
 AllowMasterESP=true                 ; Allow ESP files to act as master files while saving
 SkipTopicInfoValidation=true        ; Speed up initial plugin load by skipping topic info validation
 DisableAssertions=false             ; Remove assertion message popups (not recommended)
+DisableAutoFacegen=true             ; Prevent facegen data from being created on ESP save
 
 ;
 ; SKYRIM SETTINGS
