Make project output directories always consistent

--- a/Dependencies/libjemalloc.vcxproj
+++ b/Dependencies/libjemalloc.vcxproj
@@ -107,18 +107,24 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <IncludePath>$(SolutionDir)Dependencies\jemalloc\include\msvc_compat;$(SolutionDir)Dependencies\jemalloc\include;$(IncludePath)</IncludePath>
+    <IntDir>$(SolutionDir)x64\$(ProjectName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <IncludePath>$(SolutionDir)Dependencies\jemalloc\include\msvc_compat;$(SolutionDir)Dependencies\jemalloc\include;$(IncludePath)</IncludePath>
+    <IntDir>$(SolutionDir)x86\$(ProjectName)\</IntDir>
+    <OutDir>$(SolutionDir)x86\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <IncludePath>$(SolutionDir)Dependencies\jemalloc\include\msvc_compat;$(SolutionDir)Dependencies\jemalloc\include;$(IncludePath)</IncludePath>
+    <IntDir>$(SolutionDir)x64\$(ProjectName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <IncludePath>$(SolutionDir)Dependencies\jemalloc\include\msvc_compat;$(SolutionDir)Dependencies\jemalloc\include;$(IncludePath)</IncludePath>
+    <IntDir>$(SolutionDir)x86\$(ProjectName)\</IntDir>
+    <OutDir>$(SolutionDir)x86\$(Configuration)\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
